break down page 2

--- a/src/app/page1/page1.component.html
+++ b/src/app/page1/page1.component.html
@@ -35,6 +35,14 @@
     <app-hero></app-hero>
 
     <app-about></app-about>
+
+    <app-actions></app-actions>
+
+    <app-pricing></app-pricing>
+
+    <app-ending></app-ending>
+
+    <app-footer></app-footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <script>
